vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__alias_declaration__tests__parse_alias_with_character.snap
---
source: vhdl_syntax/src/parser/productions/alias_declaration.rs
expression: "to_test_text(Parser::alias_declaration, \"alias 'c' is 'b';\",)"
---
AliasDeclaration
  Keyword(Alias)
  CharacterLiteral ''c''
  Keyword(Is)
  Name
    NameDesignatorPrefix
      CharacterLiteral ''b''
  SemiColon
