vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__alias_declaration__tests__parse_alias_with_operator_symbol.snap
---
source: vhdl_syntax/src/parser/productions/alias_declaration.rs
expression: "to_test_text(Parser::alias_declaration, \"alias \\\"and\\\" is name;\",)"
---
AliasDeclaration
  Keyword(Alias)
  StringLiteral '"and"'
  Keyword(Is)
  Name
    NameDesignatorPrefix
      Identifier 'name'
  SemiColon
