vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__alias_declaration__tests__parse_alias_with_signature.snap
---
source: vhdl_syntax/src/parser/productions/alias_declaration.rs
expression: "to_test_text(Parser::alias_declaration,\n\"alias foo is name [return natural];\",)"
---
AliasDeclaration
  Keyword(Alias)
  Identifier 'foo'
  Keyword(Is)
  Name
    NameDesignatorPrefix
      Identifier 'name'
  Signature
    LeftSquare
    ReturnType
      Keyword(Return)
      Name
        NameDesignatorPrefix
          Identifier 'natural'
    RightSquare
  SemiColon
