vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__alias_declaration__tests__parse_alias_with_subtype_indication.snap
---
source: vhdl_syntax/src/parser/productions/alias_declaration.rs
expression: "to_test_text(Parser::alias_declaration,\n\"alias foo : vector(0 to 1) is name;\",)"
---
AliasDeclaration
  Keyword(Alias)
  Identifier 'foo'
  AliasSubtype
    Colon
    SubtypeIndication
      Name
        NameDesignatorPrefix
          Identifier 'vector'
        ParenthesizedName
          LeftPar
          AssociationList
            AssociationElement
              ActualPart
                ActualPartExpression
                  BinaryExpression
                    LiteralExpression
                      AbstractLiteral '0'
                    Keyword(To)
                    LiteralExpression
                      AbstractLiteral '1'
          RightPar
  Keyword(Is)
  Name
    NameDesignatorPrefix
      Identifier 'name'
  SemiColon
