vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__alias_declaration__tests__parse_simple_alias.snap
---
source: vhdl_syntax/src/parser/productions/alias_declaration.rs
expression: "to_test_text(Parser::alias_declaration, \"alias foo is name;\",)"
---
AliasDeclaration
  Keyword(Alias)
  Identifier 'foo'
  Keyword(Is)
  Name
    NameDesignatorPrefix
      Identifier 'name'
  SemiColon
